--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -6,7 +6,7 @@
 // configure EN settings for asciidoc
 include::src/config.adoc[]
 
-= image:logo_wiq.png[WIQ Logo] image:arc42-logo.png[arc42] Wikidata Infinite Quest
+= image:logo_wichat.png[WIChat Logo] image:arc42-logo.png[arc42] WIChat
 :revnumber: 8.2 EN
 :revdate: January 2023
 :revremark: (based upon AsciiDoc version)
