--- a/docs/src/01_introduction_and_goals.adoc
+++ b/docs/src/01_introduction_and_goals.adoc
@@ -87,6 +87,8 @@ a|
 | *_Teachers_*
 a|
 - José Emilio Labra
+- Pablo González
+- Irene Cid Rico
 | Teachers are in charge of supervising the developers work aswell as helping them solve environment, development issues or any other that may arise.
 
 | *_Users_*
