--- a/docs/src/10_quality_requirements.adoc
+++ b/docs/src/10_quality_requirements.adoc
@@ -21,10 +21,8 @@ The tests improve the stability of the codebase by detecting regressions.
 * **Performance**:
 Efficiency is a priority in system usage, particularly in quick question generation, ensuring a good experience for users.
 
-
 [role="arc42help"]
 ****
-
 .Content
 This section contains all quality requirements as quality tree with scenarios.
 The most important ones have already been described in section 1.2. (quality goals)
@@ -37,11 +35,9 @@ Since quality requirements will have a lot of influence on architectural
 decisions you should know for every stakeholder what is really important to them,
 concrete and measurable.
 
-
 .Further Information
 
 See https://docs.arc42.org/section-10/[Quality Requirements] in the arc42 documentation.
-
 ****
 
 === Quality Tree
@@ -63,8 +59,6 @@ The quality tree is a high-level overview of the quality goals and requirements:
 * a mind map with quality categories as main branches
 
 In any case the tree should include links to the scenarios of the following section.
-
-
 ****
 
 === Quality Scenarios
@@ -74,10 +68,21 @@ Usage Scenario table:
 [options="header",cols="1,2"]
 |===
 |Usage Scenario|System Reaction
-|The user initiates the web application, enters their username and password, and clicks the login button.|The system verifies the information entered by the user, and if correct, redirects them to the main page; otherwise, it indicates an error has occurred.
-|The user surveys the main window, where several buttons with different options appear.|In response to pressing each of these buttons, the system will display the corresponding content.
-|The user starts the game and is awaiting the questions.|The system swiftly generates the question and its possible answers.
-|The user loses the game and decides to stop playing for a while. Five hours later, they decide to play again.|The system remains active and functions correctly.
+
+| The user initiates the web application, enters their username and password, and clicks the login button.
+| The system verifies the information entered by the user, and if correct, redirects them to the main page; otherwise, it indicates an error has occurred.
+
+| The user surveys the main window, where several buttons with different options appear.
+| In response to pressing each of these buttons, the system will display the corresponding content.
+
+| The user starts the game and is awaiting the questions.
+| The system swiftly generates the question and its possible answers.
+
+| The user loses the game and decides to stop playing for a while. Five hours later, they decide to play again.
+| The system remains active and functions correctly.
+
+| The user decides to chat with the LLM
+| The chat window opens, and an interactive chatbot is started
 |===
 
 
@@ -85,10 +90,19 @@ Change Scenario table:
 
 [options="header",cols="1,2"]
 |===
-|Change Scenario|System Reaction
-|Adding an additional login system to access the account not only through username but also through the email. |The system should be capable of adapting to provide this functionality without affecting the existing ones. The tests verify that the old login is not affected.
-|Adding a new game mode or functionality.|When adding a new feature, the application's usage methodology should not be distorted, ensuring it can still be used in the same manner.
-|Adding a new game language.|When adding a new game language, the system should continue to function smoothly.
+| Change Scenario
+| System Reaction
+
+| Adding an additional login system to access the account not only through username but also through the email.
+| The system should be capable of adapting to provide this functionality without affecting the existing ones. The tests verify that the old login is not affected.
+
+| Adding a new game mode or functionality.
+| When adding a new feature, the application's usage methodology should not be distorted, ensuring it can still be used in the same manner.
+
+| Changing the LLM backend
+| The LLM service should be flexible enough to support multiple LLM's in the
+future
+
 |===
 
 Performance Scenario table:
@@ -99,7 +113,7 @@ Performance Scenario table:
 
 | The user starts a game
 | The questions should be generated fast, and the user shouldn't have to wait
-more than a second or two for the game to start.
+  more than a second or two for the game to start.
 
 | The user starts a chat with the LLM, to ask questions.
 | The chat should work smoothly.
@@ -116,6 +130,10 @@ Testing Scenario table:
 
 | A change on the codebase breaks functionality
 | The existing test suite should fail and reveal the regression
+
+| The system starts a test for the LLM service
+| The tests should run deterministically. Chats are simulated, so no LLM
+randomness affects the test. Tests for the LLM service should be deterministic.
 
 |===
 
