docu actualizada con decisiones arquitectonicas de BD y LLM

--- a/docs/src/09_architecture_decisions.adoc
+++ b/docs/src/09_architecture_decisions.adoc
@@ -36,3 +36,7 @@ There you will find links and examples about ADR.
 include::ADR/01-fork-base-project.adoc[]
 
 include::ADR/02-git-workflow.adoc[]
+
+include::ADR/03-databases.adoc[]
+
+include::ADR/04-llm-api.adoc[]
