--- a/docs/src/15_monitoring.adoc
+++ b/docs/src/15_monitoring.adoc
@@ -1,12 +1,12 @@
 ifndef::imagesdir[:imagesdir: ../images]
 
 [[section-monitoring]]
-== Appendix II: Application monitoring
+== Appendix III: Application monitoring
 
 Monitoring an application is a crucial part of it. It is an easy way of knowing how well a web application is working through different graphics and metrics. For this, we adapted the monitoring system that was given to us and we personalized it. That means we are using Prometheus as well as Grafana to monitorize our project. Prometheus intercepts every request that reaches our application's gateway. Grafana takes those data at paints them in easy-understanding graphics. We have a dashboard in Grafana to display some aspects that we consider relevant.
 
 The dashboard that we are using to monitorize our project is called _wichat_es1a Dashboard_ and it has 3 different panels. The first of them shows the number of requests through time. The second one shows requests that succeed. The third one paints a graphic of the average time each request takes.
 
-image::14_monitoring_graphics.png["Grafana dashboard"]
+image::15_monitoring_graphics.png["Grafana dashboard"]
 
 To see how Grafana works we have used Apache. We have stablished the number of requests and how fast we want them to execute. This lets us check easily how our project treats requests. Also, another interesting thing to mention are the http://172.187.170.130/:8000/metrics[ metrics ]. It shows every different request on the application and its status code.
