--- a/docs/src/14_other_tests.adoc
+++ b/docs/src/14_other_tests.adoc
@@ -15,10 +15,31 @@ Additionally, SonarCloud offers a graphic showing risk levels across different p
 image::14_SonarCloud_2.png["Risks graphic"]
 
 === Usability Tests 
-Usability was one of our main quality goals, and we kept it in mind throughout the development process. However, to ensure that the application was truly user-friendly, we conducted a series of simple usability tests.
+To evaluate how intuitive and accessible our application is for end users, we conducted a series of usability tests involving five participants: three with prior experience using similar applications, and two with no prior experience.
 
-We asked three users to test the application during different stages of development, helping us identify issues that we might have missed ourselves.
+Each user was asked to perform the following tasks:
 
-For example, one user pointed out that the 'Play' button on the homepage always redirected to the login page, even when the user was already logged in. This caused confusion, so we updated the behavior to redirect logged-in users directly to the game selection page.
+* Register an account
 
-Another usability test was carried out on the Android application. A user noticed that the navigation bar occasionally behaved oddly, disrupting the entire interface. Based on this feedback, we adjusted and improved the navbar to ensure a smoother experience.
+* Access the game mode
+
+* Complete a game session
+
+All participants successfully completed all tasks without external help.
+
+Results Summary:
+
+Experienced users:
+
+* Average task completion time: 1:39 minutes
+
+* Reported being satisfied with the interface and flow
+
+Inexperienced users:
+
+* Average task completion time: 2:47 minutes
+
+* Also reported satisfaction and found the application easy to learn
+
+These results suggest that the application provides a user-friendly experience for both novice and experienced users, with no significant usability barriers.
+
